# gtkcalc

./: CMakeLists.txt  LICENSE  Makefile  README.md  calc.cpp  calc.hpp  calculator  calculator.c  main.cpp
